tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__command_failure_bash.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: normalized.as_ref()
---
❌ [31mBranch [1m[31mexisting[0m already exists[0m

💡 [2mRemove --create flag to switch to it[0m
