tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__fish_multiline_command_execution.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: normalized.as_ref()
---
Created new worktree for fish-multiline at [TMPDIR]/test-repo.fish-multiline
line 1
line 2
line 3
