tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__fish_wrapper_preserves_progress_messages.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized().as_ref()
---
🔄 [36mRunning post-start:[0m
[40m [0m [1m[34mecho [32m'fish background task'

✅ [32mCreated new worktree for [1m[32mfish-bg[0m, changed directory to [2m[TMPDIR]/test-repo.fish-bg[0m[0m
