tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__merge.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
✅ [32mMerged to [1m[32mmain[0m[0m
✅ [32mWorktree preserved (--no-remove)[0m
