tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__merge_through_wrapper_no_directive_leak.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: normalized.as_ref()
---
🔄 Validating merge...
Already on main, nothing to merge
