tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__merge_with_pre_merge_failure_bash.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized().as_ref()
---
🔄 [36mRunning pre-merge command [1m[36mformat[0m:[0m
[40m [0m [1m[34mecho [32m'✓ Code formatting check passed'

✓ Code formatting check passed

🔄 [36mRunning pre-merge command [1m[36mtest[0m:[0m
[40m [0m [1m[34mecho [32m'✗ Test suite failed: 3 tests failing' [36m&& [1m[34mexit 1

✗ Test suite failed: 3 tests failing
❌ [31mPre-merge command failed: [1m[31mtest[0m[0m

Command failed with exit code: exit status: 1

💡 [2mUse --no-hooks to skip pre-merge commands[0m
